07_deploy_environments/02_dev_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: equino-dev-ingress
  namespace: equino-dev
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  rules:
#    - host: dev.cloud.equino.ovh
#      http:
#        paths:
#          - path: /actracker-api/
#            pathType: Prefix
#            backend:
#              service:
#                name: actracker-api
#                port:
#                  number: 8080
  tls:
    - secretName: equino-dev-tls
      hosts:
#        - dev.cloud.equino.ovh
