07_deploy_environments/03_int_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: equino-int-ingress
  namespace: equino-int
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  rules:
    - host: int.cloud.equino.ovh
      http:
        paths:
          - path: /actracker-api/api
            pathType: Prefix
            backend:
              service:
                name: actracker-api
                port:
                  number: 8080
          - path: /actracker-ui
            pathType: Prefix
            backend:
              service:
                name: actracker-ui
                port:
                  number: 8080
  tls:
    - secretName: equino-int-tls
      hosts:
        - int.cloud.equino.ovh
