07_deploy_environments/04_prod_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: equino-prod-ingress
  namespace: equino-prod
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  rules:
    - host: prod.cloud.equino.ovh
      http:
        paths:
          - path: /actracker-api/
            pathType: Prefix
            backend:
              service:
                name: actracker-api
                port:
                  number: 8080
  tls:
    - secretName: equino-prod-tls
      hosts:
        - prod.cloud.equino.ovh
